# fa25-fa25-team083

./: .env.example  .gitignore  Dockerfile  README.md  astronauts.json  docker-compose.yml  project_structure.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  app.py  astronauts.json  hello.py  insight_cache.json  llspacedevs.py  moon_phase.py  nasa_apod.py  nasa_insight.py  nasa_neos.py  nasa_timer.py  pyproject.toml
backend/team083.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test.py  test_backend.py  test_countdown_timer.py
frontend/: Dockerfile  LICENSE  index.html  nginx.conf  package-lock.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  spaceApi.ts
frontend/src/components/common/: PageMeta.tsx
frontend/src/components/dashboard/: RemoteData.tsx
frontend/src/context/: SidebarContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  SidebarWidget.tsx
frontend/src/pages/: UserProfiles.tsx
frontend/src/pages/Apod/: ApodPage.tsx
frontend/src/pages/Astronauts/: AstronautsPage.tsx
frontend/src/pages/AuthPages/: AuthPageLayout.tsx
frontend/src/pages/Dashboard/: Home.tsx
frontend/src/pages/MarsInsight/: MarsInsightPage.tsx
frontend/src/pages/MoonPhase/: MoonPhasePage.tsx
frontend/src/pages/Neos/: NeosPage.tsx
frontend/src/pages/OtherPage/: NotFound.tsx
tests/: test_backend.py  test_countdown_timer.py  test_llspacedevs.py  test_moon_phase.py
(+4 files in other folders)
