[project]
name = "team083"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["flask","requests","python-dotenv"]

[project.optional-dependencies]
dev = ["pytest","pytest-cov","ruff","black"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "nasa_apod"]